force-app/main/default/objects/Job__c/fields/Date_of_Listing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Listing__c</fullName>
    <description>The date the job was posted.</description>
    <label>Date of Listing</label>
    <type>Date</type>
</CustomField>