force-app/main/default/objects/Job__c/fields/Link_to_Listing__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Listing__c</fullName>
    <description>Link to the job posting where we will be applying.</description>
    <label>Link to Listing</label>
    <type>Url</type>
</CustomField>