force-app/main/default/objects/Job__c/fields/Location_Condition__c.field-meta.xml
<CustomField>
    <fullName>Location_Condition__c</fullName>
    <description>Does this role require being in-office, or does it allow WFH option?</description>
    <label>Location Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Remote/WFH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>