force-app/main/default/objects/Job__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>What is the base salary, or avg of the range provided?</description>
    <label>Salary</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>